--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,16 @@
+ test:
+  stage: test
+  only:
+    - master
+  tags: 
+    - dockerfasibio
+  image: golang:1.12.8
+  script:
+   - go test -mod=vendor -short -coverprofile=cov.out
+  artifacts: 
+   paths: 
+     - ./cov.out
+ 
  uploadSonarqube: 
     image: ciricihq/gitlab-sonar-scanner
     stage: sonarqube
@@ -7,6 +20,9 @@
       - master
     tags:
       - dockerfasibio
+    artifacts: 
+      paths: 
+        - ./cov.out
  buildBin: 
     stage: buildBin
     only:
@@ -45,6 +61,7 @@
 
 
  stages:
+   - test
    - sonarqube
    - buildBin
    - buildImage
