--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.exclusions=**/*_test.go,**/vendor/**
+sonar.exclusions=**/**/*_test.go,**/vendor/**
 sonar.tests=.
-sonar.test.inclusions=**/*_test.go
+sonar.test.inclusions=**/**/*_test.go
 sonar.test.exclusions=**/vendor/**
 sonar.go.coverage.reportPaths=cov.out
