--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@
       paths:
         - funk_agent
     script: 
-     - docker build --build-arg buildNumber=${CI_PIPELINE_IID} -t ${IMAGE_NAME}:${CI_COMMIT_REF_NAME} .
+     - docker build --build-arg buildNumber=${CI_PIPELINE_IID} -t ${IMAGE_NAME}:latest .
 
  publishMaster: 
    stage: publish
@@ -102,7 +102,7 @@
      - dockerfasibio
    script: 
      - docker login -u ${dockerhubuser} -p ${dockerhubpassword}
-     - ocker push ${IMAGE_NAME}:${CI_COMMIT_REF_NAME}
+     - ocker push ${IMAGE_NAME}:latest
 
 
  stages:
